# Spoolscribe-

./: .gitignore  CHANGELOG.md  LICENSE  README.md  app_gui.py  convert_profile.py  core.py  pyproject.toml  requirements.txt  spoolscribe.spec
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
data/: app.icns  polymaker_db.json
docs/: DATA_SOURCES.md  PRIVACY.md  ROADMAP.md  TRADEMARKS.md
docs/wiki/: FAQ.md  Getting-Started.md  Home.md  Snapmaker-U1-and-paxx12.md  Updating-the-Database.md  Writing-RFID-Tags.md
scripts/: download_orca_profiles.py  import_orca_profiles.py  make_icons.py  scrape_internal_exact_hex.py  scrape_spoolman_hex.py  scrape_spoolman_multibrand_hex.py  scrape_thefilamentdb_hex.py  scrape_thefilamentdb_multibrand_hex.py  scrape_wholesale.py  scrape_wiki_hex.py  seed_prusament.py  seed_rosa3d.py  sync_multibrand_assets.py  sync_polymaker_brand_assets.py
tools/: make_icons.py
